done adding entry from contact book, updated FAB behaviour in fragments on records availability, switch to use single Dialog on addinr record