@@ -5,6 +5,7 @@ import android.database.Cursor;
 import android.graphics.Color;
 import android.os.Build;
 import android.telephony.PhoneNumberUtils;
+import android.text.TextUtils;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
@@ -23,13 +24,13 @@ import io.github.d2edev.distinctivering.util.Utility;
  * Created by d2e on 15.06.16.
  */
 
-public class NameNumPicListAdapter extends CursorAdapter{
-    public static final String TAG="TAG_"+NameNumPicListAdapter.class.getSimpleName();
+public class NameNumPicListAdapter extends CursorAdapter {
+    public static final String TAG = "TAG_" + NameNumPicListAdapter.class.getSimpleName();
 
     //FirstName+SecondName if true, SecondName+FirstName otherwise
-    private boolean mNameNativeOrder=true;
+    private boolean mNameNativeOrder = true;
 
-    private List<Integer> selectedNumIDs =new LinkedList<>();
+    private List<Integer> selectedNumIDs = new LinkedList<>();
 
 
     public NameNumPicListAdapter(Context context, Cursor c, int flags) {
@@ -38,10 +39,10 @@ public class NameNumPicListAdapter extends CursorAdapter{
 
     @Override
     public View newView(Context context, Cursor cursor, ViewGroup parent) {
-        View view= LayoutInflater.from(context).inflate(R.layout.list_numbers_allowed_item,parent,false);
+        View view = LayoutInflater.from(context).inflate(R.layout.list_numbers_allowed_item, parent, false);
         ViewHolder viewHolder = new ViewHolder(view);
         view.setTag(viewHolder);
-        return  view;
+        return view;
     }
 
     public List<Integer> getSelectedNumIDs() {
@@ -51,42 +52,35 @@ public class NameNumPicListAdapter extends CursorAdapter{
     @Override
     public void bindView(View view, Context context, Cursor cursor) {
         ViewHolder viewHolder = (ViewHolder) view.getTag();
+
         //Cursor should contain following columns in following order
         //FistName,SecondName,PicPath,Number
-        String name="";
+        String name = "";
 //        Log.d(TAG, "bindView: cursor " + cursor.getString(0) +" " +cursor.getString(1)+ " "
 //                + cursor.getString(2)+ " " + cursor.getString(3) );
-        if(selectedNumIDs.contains(new Integer(cursor.getInt(5)))){
+        if (selectedNumIDs.contains(Integer.valueOf(cursor.getInt(5)))) {
             view.setBackgroundColor(Color.parseColor(context.getString(R.color.my_accent_light)));
-        }else{
+        } else {
             view.setBackgroundColor(Color.TRANSPARENT);
         }
-        if (mNameNativeOrder){
-            name=cursor.getString(0)+" "+ cursor.getString(1);
-        }else{
-            name=cursor.getString(1)+", "+ cursor.getString(0);
-        }
+        name = formattedNameLine(cursor.getString(0), cursor.getString(1), mNameNativeOrder);
         viewHolder.tvFullName.setText(name);
-
-        if(Build.VERSION.SDK_INT>=Build.VERSION_CODES.LOLLIPOP){
-            viewHolder.tvNumber.setText("+"+PhoneNumberUtils.formatNumber(cursor.getString(3), Locale.getDefault().getCountry()));
-        }else{
-            viewHolder.tvNumber.setText("+"+PhoneNumberUtils.formatNumber(cursor.getString(3)));
-        }
-        Utility.setImage(viewHolder.ivUserPic,cursor.getString(2),R.drawable.ic_person_green);
+        viewHolder.tvNumber.setText(cursor.getString(3));
+        //TODO make image load at nonUI thread, enable caching
+        Utility.setImage(viewHolder.ivUserPic, cursor.getString(2), R.drawable.ic_person_green);
 
 
     }
 
-    public static class ViewHolder{
+    public static class ViewHolder {
         public final ImageView ivUserPic;
         public final TextView tvFullName;
         public final TextView tvNumber;
 
-        public ViewHolder(View view){
-            ivUserPic= (ImageView) view.findViewById(R.id.allowed_list_entry_pic);
-            tvFullName= (TextView) view.findViewById(R.id.allowed_list_entry_name);
-            tvNumber= (TextView) view.findViewById(R.id.allowed_list_entry_phone);
+        public ViewHolder(View view) {
+            ivUserPic = (ImageView) view.findViewById(R.id.allowed_list_entry_pic);
+            tvFullName = (TextView) view.findViewById(R.id.allowed_list_entry_name);
+            tvNumber = (TextView) view.findViewById(R.id.allowed_list_entry_phone);
         }
 
 
@@ -105,6 +99,18 @@ public class NameNumPicListAdapter extends CursorAdapter{
         return super.swapCursor(newCursor);
     }
 
+    private String formattedNameLine(String first, String second, boolean nativeOrder) {
+        String result = null;
+
+        if (TextUtils.isEmpty(first)) return second;
+        if (TextUtils.isEmpty(second)) return first;
+        if (nativeOrder) {
+            result = first + " " + second;
+        } else {
+            result = second + ", " + first;
+        }
+        return result;
+    }
 
 
 }
